--- a/css/style.css
+++ b/css/style.css
@@ -1034,16 +1034,21 @@ img{
 
 #testimonial .testi-item img{
     opacity: .6;
+    background: white;
 }
 
 
 #testimonial .slick-center img{
-    transform: scale(1.3);
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
     opacity: 1;
+    border: 2px solid var(--brand);
+}
+#testimonial .slick-center img{
+    background: var(--brand) !important;
 }
  #testimonial .testi-leftarrow{
 	font-size: 40px;
@@ -1129,11 +1134,11 @@ img{
 }
 #brand .brand-item img{
     width: 100%;
-    transform: scale(.9);
-    -webkit-transform: scale(.9);
-    -moz-transform: scale(.9);
-    -ms-transform: scale(.9);
-    -o-transform: scale(.9);
+    transform: scale(.8);
+    -webkit-transform: scale(.8);
+    -moz-transform: scale(.8);
+    -ms-transform: scale(.8);
+    -o-transform: scale(.8);
     transition: all linear .5s;
     -webkit-transition: all linear .5s;
     -moz-transition: all linear .5s;
@@ -1142,11 +1147,11 @@ img{
 }
 
 #brand .slick-center{
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
+    transform: scale(.9);
+    -webkit-transform: scale(.9);
+    -moz-transform: scale(.9);
+    -ms-transform: scale(.9);
+    -o-transform: scale(.9);
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
 }
 #brand .brand-leftarrow{
@@ -1393,7 +1398,7 @@ footer .footer-four .part1 .actv{
     right: 30px;
     z-index: 99999;
     font-size: 20px;
-    color:black;
+    color:rgb(0, 255, 55);
     border-radius:50%;
     font-weight:700;
     transition:all linear .6s;
@@ -1402,10 +1407,52 @@ footer .footer-four .part1 .actv{
     -ms-transition:all linear .6s;
     -o-transition:all linear .6s;
     display: none;
+    animation: fun 2s linear infinite;
+    -webkit-animation: fun 2s linear infinite;
+    -moz-animation: fun 3s linear infinite;
+    -o-animation: fun 3s linear infinite;
+}
+@keyframes fun{
+    0%{
+       transform: scale(1);
+       -webkit-transform: scale(1);
+       -moz-transform: scale(1);
+       -ms-transform: scale(1);
+       -o-transform: scale(1);
+}
+    25%{
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+}
+   
+    50%{
+        transform: scale(.9);
+        -webkit-transform: scale(.9);
+        -moz-transform: scale(.9);
+        -ms-transform: scale(.9);
+        -o-transform: scale(.9);
+}
+    75%{
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+}
+    100%{
+        transform: scale(1);
+       -webkit-transform: scale(1);
+       -moz-transform: scale(1);
+       -ms-transform: scale(1);
+       -o-transform: scale(1);
+    }
 }
 
 #back-top:hover{
-    color: white;
+    color: rgb(255, 255, 255);
     background: red;
 }
 /* ============================
